Schedules menu reworked. Added filter by course in schedules list. Create\edit form combined. Filtering and marking logic for availability of Teacher\Classrom moved to schedule.js My-schedule template need to be done. Tests need to be added.